--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-minimal-pie-chart": "^9.1.1",
     "react-range": "^1.10.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
